# ModelToProduction

./: Dockerfile  README.md  pyproject.toml
common/: __init__.py  generate_sensor_data.py
debug/: Readtraining.py
model/: generate_artificial_dataset.py  train_model.py
sensor/: simulate_sensors_stream.py
server/: application.py  main.py
server/test/: application_test.py  import_versions
